Split out the application and server into separate modules.  Configure application to be started when server starts.