@@ -1,6 +1,6 @@
 ### Notes
-1. Currently targeting Java 21
+1. Currently targeting Java 17
 
 ### Steps
 1. `mvn clean package`
-2. `java -cp "target/liberty/*" -Dliberty.wlp.home=target/liberty/wlp -jar target/liberty-poc-1.0-jar-with-dependencies.jar`
+2. `java -cp "liberty-poc-server/target/liberty/*" -Dliberty.wlp.home=liberty-poc-server/target/liberty/wlp --add-opens java.base/java.lang=ALL-UNNAMED -jar liberty-poc-server/target/liberty-poc-server-1.0-jar-with-dependencies.jar`
